--- a/portfolio.html
+++ b/portfolio.html
@@ -94,11 +94,18 @@
           <ul class="projects">
             <li class="project">
               <a class="project-link" href="">
-                <img
-                  class="img"
-                  src="./images/project-1.jpg"
-                  alt="Вебсайт Технокряк"
-                />
+                <div class="project-thumb">
+                  <img
+                    class="img"
+                    src="./images/project-1.jpg"
+                    alt="Вебсайт Технокряк"
+                  />
+                  <p class="thumb-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="wrp-img">
                   <h2 class="img-title">Технокряк</h2>
                   <p class="img-description">Веб-сайт</p>
@@ -107,11 +114,18 @@
             </li>
             <li class="project">
               <a class="project-link" href="">
-                <img
-                  class="img"
-                  src="./images/project-2.jpg"
-                  alt="Постер New Orlean vs Golden Star"
-                />
+                <div class="project-thumb">
+                  <img
+                    class="img"
+                    src="./images/project-2.jpg"
+                    alt="Постер New Orlean vs Golden Star"
+                  />
+                  <p class="thumb-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="wrp-img">
                   <h2 class="img-title">Постер New Orlean vs Golden Star</h2>
                   <p class="img-description">Дизайн</p>
@@ -120,11 +134,18 @@
             </li>
             <li class="project">
               <a class="project-link" href="">
-                <img
-                  class="img"
-                  src="./images/project-3.jpg"
-                  alt="Ресторан Seafood"
-                />
+                <div class="project-thumb">
+                  <img
+                    class="img"
+                    src="./images/project-3.jpg"
+                    alt="Ресторан Seafood"
+                  />
+                  <p class="thumb-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="wrp-img">
                   <h2 class="img-title">Ресторан Seafood</h2>
                   <p class="img-description">Додаток</p>
@@ -133,11 +154,18 @@
             </li>
             <li class="project">
               <a class="project-link" href="">
-                <img
-                  class="img"
-                  src="./images/project-4.jpg"
-                  alt="Проєкт Prime"
-                />
+                <div class="project-thumb">
+                  <img
+                    class="img"
+                    src="./images/project-4.jpg"
+                    alt="Проєкт Prime"
+                  />
+                  <p class="thumb-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="wrp-img">
                   <h2 class="img-title">Проєкт Prime</h2>
                   <p class="img-description">Маркетинг</p>
@@ -146,11 +174,18 @@
             </li>
             <li class="project">
               <a class="project-link" href="">
-                <img
-                  class="img"
-                  src="./images/project-5.jpg"
-                  alt="Проєкт Boxes"
-                />
+                <div class="project-thumb">
+                  <img
+                    class="img"
+                    src="./images/project-5.jpg"
+                    alt="Проєкт Boxes"
+                  />
+                  <p class="thumb-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="wrp-img">
                   <h2 class="img-title">Проєкт Boxes</h2>
                   <p class="img-description">Додаток</p>
@@ -159,11 +194,18 @@
             </li>
             <li class="project">
               <a class="project-link" href="">
-                <img
-                  class="img"
-                  src="./images/project-6.jpg"
-                  alt="Веб-сайт Inspiration has no Borders"
-                />
+                <div class="project-thumb">
+                  <img
+                    class="img"
+                    src="./images/project-6.jpg"
+                    alt="Веб-сайт Inspiration has no Borders"
+                  />
+                  <p class="thumb-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="wrp-img">
                   <h2 class="img-title">Inspiration has no Borders</h2>
                   <p class="img-description">Веб-сайт</p>
@@ -172,11 +214,18 @@
             </li>
             <li class="project">
               <a class="project-link" href="">
-                <img
-                  class="img"
-                  src="./images/project-7.jpg"
-                  alt="Видання Limited Edition"
-                />
+                <div class="project-thumb">
+                  <img
+                    class="img"
+                    src="./images/project-7.jpg"
+                    alt="Видання Limited Edition"
+                  />
+                  <p class="thumb-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="wrp-img">
                   <h2 class="img-title">Видання Limited Edition</h2>
                   <p class="img-description">Дизайн</p>
@@ -185,11 +234,18 @@
             </li>
             <li class="project">
               <a class="project-link" href="">
-                <img
-                  class="img"
-                  src="./images/project-8.jpg"
-                  alt="Проєкт LAB"
-                />
+                <div class="project-thumb">
+                  <img
+                    class="img"
+                    src="./images/project-8.jpg"
+                    alt="Проєкт LAB"
+                  />
+                  <p class="thumb-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="wrp-img">
                   <h2 class="img-title">Проєкт LAB</h2>
                   <p class="img-description">Маркетинг</p>
@@ -198,11 +254,18 @@
             </li>
             <li class="project">
               <a class="project-link" href="">
-                <img
-                  class="img"
-                  src="./images/project-9.jpg"
-                  alt="Додаток Growing Business"
-                />
+                <div class="project-thumb">
+                  <img
+                    class="img"
+                    src="./images/project-9.jpg"
+                    alt="Додаток Growing Business"
+                  />
+                  <p class="thumb-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="wrp-img">
                   <h2 class="img-title">Growing Business</h2>
                   <p class="img-description">Додаток</p>
